--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
     "autoload": {
         "psr-0": { "Nelmio\\ApiDocBundle": "" }
     },
-    "target-dir": "",
+    "target-dir": "Nelmio/ApiDocBundle",
     "extra": {
         "branch-alias": {
             "dev-master": "2.7.x-dev"
