--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,7 @@
         "jms/serializer": "For making use of serializer information in the doc."
     },
     "autoload": {
-        "psr-0": { "Nelmio\\ApiDocBundle": "" },
-        "psr-4": { "Nelmio\\ApiDocBundle": "" }
+        "psr-0": { "Nelmio\\ApiDocBundle": "Nelmio/ApiDocBundle/" }
     },
 
     "extra": {
