--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,9 @@
         "jms/serializer": "For making use of serializer information in the doc."
     },
     "autoload": {
-        "psr-0": { "Nelmio\\ApiDocBundle": "Nelmio/ApiDocBundle/" }
+        "psr-0": { "Nelmio\\ApiDocBundle": "" }
     },
-
+    "target-dir": "Nelmio/ApiDocBundle",
     "extra": {
         "branch-alias": {
             "dev-master": "2.7.x-dev"
